syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles/client_cp";

import "internal/pkg/protofiles/client_cp/job_messages.proto";
import "internal/pkg/protofiles/client_cp/metadata.proto";

service JobServices{
   rpc GetLogs(RequestForLogs) returns (Log);
   rpc ExecuteJob(RequestForExecute) returns (Response);
   rpc GetJobList(RequestForGetJobList) returns (JobList);
   rpc DescribeJob(RequestForDescribe) returns (Metadata);
}